# sling

./: .gitmodules  README.md  Sling.md
client-js/: .eslintrc.js  package.json  tsconfig.json
client-js/src/: index.ts  serialiser.ts  slingProtocol.ts
common/: sling_message.h
linux/: CMakeLists.txt  run_sling.sh
linux/include/: mosquitto.h
linux/src/: common.h  main.c  sinter_host.c  sinter_host_display_result.c  sinter_host_replace_rand.c
